Fixed z-index issue with the user avatar on the Public Profile (All IE versions)

--- a/web/less/frontend/_collector.less
+++ b/web/less/frontend/_collector.less
@@ -5,6 +5,7 @@
 	min-height: 138px;
 
 	.profile-info {
+		position: relative;
 		background-color: @yellowBackground;
 		color: @blueDark;
 		padding: 4px 5px;
@@ -12,6 +13,11 @@
 	.profile-img {
 		float: left;
 		padding: 0 25px 15px 0;
+	}
+	.profile-avatar {
+		margin-top: -55px;
+		z-index: 10;
+		background-color: #fff;
 	}
 	.stat-area {
 		height: 44px;
